--- a/tower.vcxproj
+++ b/tower.vcxproj
@@ -56,6 +56,7 @@
     <ProjectGuid>{70cbca5e-67dd-4ec3-8e80-871b03d6fafb}</ProjectGuid>
     <RootNamespace>tower</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>minestorm</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
